libs/extractor/tests/snapshots/all_tests__extract_selector.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import {Box} from '@devup-ui/core'\n        <Box _hover={{\n          mx: 1\n        }} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "margin-left",
                value: "4px",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin-right",
                value: "4px",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"a b\" />;\n",
}
